src/test/deca/context/valid/test_pass_3_init_int_to_float.deca
// Description:
//    Program testing pass 3 that we can assign a int to a float variable
//
// Results:
//    ok
//
// History:
//    Created on 10/01/2025

{
    float a = 3;
}
