src/test/deca/context/invalid/test_class/variable_redeclaration.deca
// Description:
//    Testing an attempt to redefine an existing identifier.
//
// Results:
//    Must lift an error indicating a REDECLATION.
//
// History:
//    Created on 20/1/2025
{
    int a = 10;
    int a = 20;
}
